--- a/checkout.html
+++ b/checkout.html
@@ -29,8 +29,8 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link"
-            href="amazon.html">3 items</a>)
+          Checkout (<a class="return-to-home-link js-cart-quantity-checkout"
+            href="amazon.html"></a>)
         </div>
 
         <div class="checkout-header-right-section">
@@ -83,6 +83,8 @@
         </div>
       </div>
     </div>
+    <script src = "https://unpkg.com/supersimpledev@1.0.1/hello.js"></script>
+    <script src = "https://unpkg.com/dayjs@1.11.10/dayjs.min.js"></script>
     <script  type = "module" src = "scripts/checkout.js"></script>
 
   </body>
