--- a/checkout.html
+++ b/checkout.html
@@ -29,8 +29,8 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link js-cart-quantity-checkout"
-            href="amazon.html"></a>)
+          Checkout (<a class="return-to-home-link"
+            href="amazon.html">3 items</a>)
         </div>
 
         <div class="checkout-header-right-section">
@@ -44,17 +44,13 @@
 
       <div class="checkout-grid">
         <div class="order-summary js-order-summary">
-
         </div>
 
         <div class="payment-summary js-payment-summary">
-
         </div>
       </div>
     </div>
-    
-    
-    <script  type = "module" src = "scripts/checkout.js"></script>
 
+    <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
